--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -21,7 +22,9 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^6.20.1",
+    "react-select": "^5.10.1",
     "react-sneat": "file:",
+    "react-toastify": "^11.0.5",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.16"
   },
