--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-select": "^5.10.1",
     "react-sneat": "file:",
     "react-toastify": "^11.0.5",
+    "react-virtualized": "^9.22.6",
     "sort-by": "^1.2.0",
     "styled-components": "^6.1.16"
   },
