--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "axios": "^1.8.4",
     "bootstrap": "^5.3.3",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "perfect-scrollbar": "^1.5.5",
@@ -22,6 +24,7 @@
     "react-chat-elements": "^12.0.18",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.20.1",
     "react-select": "^5.10.1",
     "react-sneat": "file:",
